task-service.tf
resource "aws_ecs_service" "main" {
  name                               = "${var.name}-service"
  cluster                            = aws_ecs_cluster.main.id
  task_definition                    = aws_ecs_task_definition.main.arn
  desired_count                      = 2
  deployment_minimum_healthy_percent = 50
  deployment_maximum_percent         = 200
  launch_type                        = "FARGATE"
  scheduling_strategy                = "REPLICA"
  
  network_configuration {
    security_groups  = [aws_security_group.ecs_tasks.id]
    subnets          = [for subnet in aws_subnet.public : subnet.id]
    assign_public_ip = true
  }

#   load_balancer {
#     target_group_arn = aws_alb_target_group.main.arn
#     container_name   = "node-server"
#     container_port   = var.container_port
#   }
#   depends_on = [aws_alb_target_group.main]

  lifecycle {
    ignore_changes = [task_definition, desired_count]
  }
}
